fixed text alignment in small screens

--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
  .dark {
      background-color: #16213E !important;
      color: white !important;
- 
+
  }
 
  #nav-toggle {
@@ -151,6 +151,8 @@
      color: black;
      text-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
      margin-bottom: 30px;
+     text-align: center;
+
  }
 
  #hero h2 {
@@ -159,6 +161,8 @@
      color: black;
      text-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
      margin-bottom: 30px;
+     text-align: center;
+
  }
 
  #hero h3 {
@@ -167,6 +171,7 @@
      color: black;
      text-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
      margin-bottom: 30px;
+     text-align: center;
  }
 
  #hero h4 {
@@ -559,7 +564,7 @@
  }
 
  /* Responsive styles */
-/* @media only screen and (max-width: 768px) {
+ /* @media only screen and (max-width: 768px) {
     #nav {
       flex-direction: column;
       padding: 10px;
@@ -720,5 +725,3 @@
 
      }
  }
-
-  
